--- a/src/app/chat/components/messager-tools/messager-tools.component.html
+++ b/src/app/chat/components/messager-tools/messager-tools.component.html
@@ -1,3 +1,22 @@
 <div class="inform">
-    <div class="tools"></div>
+    <div class="tools">
+      <h6>Действия</h6>
+      <button>Создать индивидуальное
+        предложение</button>
+      <button>отменить работу</button>
+      <button>обратиться в арбитраж</button>
+      <button>Блокировать</button>
+    </div>
+    <div class="timer">
+      <h6>Кол-во дней до завершения заказа</h6>
+      <div class="clock">
+        <div> <span>0</span> </div>
+        <div> <span>0</span> </div>
+        <div> <span>0</span> </div>
+        <div> <span>3</span> </div>
+      </div>
+    </div>
+    <div class="history">
+      <h6>История</h6>
+    </div>
   </div>
