--- a/src/app/chat/components/collocutors-list/collocutors-list.component.html
+++ b/src/app/chat/components/collocutors-list/collocutors-list.component.html
@@ -1,31 +1,34 @@
-<div class="wrapper" *ngIf="chatRooms">
+<div class="wrapper" *ngIf="chatRooms && chatType" [ngClass]="{ projects: chatType === 'projects' }">
   <section class="line">
-  Все сообщения <span>(1250)</span>
-</section>
-<section class="collocutors-wrap">
-  <div class="collocutors-serch">
-    <div class="search">
-      <input type="text" name="" id="" placeholder="Найти">
-    </div>
+    Все сообщения <span>(1250)</span>
+  </section>
+  <section class="collocutors-wrap">
+    <div class="collocutors-serch" *ngIf="chatType !== 'projects'">
+      <div class="search">
+        <input type="text" name="" id="" placeholder="Найти">
+      </div>
 
-  </div>
-  <div class="collocutors-list" >
-    <div class="collocutor" *ngFor="let i of chatRooms" (click)="openChat(i.code)">
-      <p class="date">Вчера 22:30</p>
-      <div class="message-preview">
-        <div class="photo">
-          <img src="/assets/images/chat/collocutor-photo.jpg" alt="collocutor-photo">
-          <span class="status"></span>
-        </div>
-        <div class="message-information">
-          <p class="collocutor-name">Анна Маслова</p>
-          <p class="collocutor-message">Будем на связе и, пожалуйста,
-            не затягивайте долго с Будем на связе и, пожалуйста,
-            не затягивайте долго с...</p>
+    </div>
+    <div class="filters" *ngIf="chatType == 'projects'">
+
+    </div>
+    <div class="collocutors-list" [ngClass]="{ projects: chatType === 'projects' }">
+      <div class="collocutor" *ngFor="let i of chatRooms" (click)="openChat(i.code)">
+        <span *ngIf="chatType == 'projects'" class="status"></span>
+        <p class="date">Вчера 22:30</p>
+        <div class="message-preview">
+          <div class="photo">
+            <img src="/assets/images/chat/collocutor-photo.jpg" alt="collocutor-photo">
+            <span class="status"></span>
+          </div>
+          <div class="message-information">
+            <p class="collocutor-name">Анна Маслова</p>
+            <p class="collocutor-message">Будем на связе и, пожалуйста,
+              не затягивайте долго с Будем на связе и, пожалуйста,
+              не затягивайте долго с...</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 </div>
-
