--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/main-user-settings/main-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/main-user-settings/main-user-settings.component.html
@@ -31,7 +31,7 @@
         </div>
       </div>
     </div>
-    <div class="gender-block">
+    <div class="gender-block radio-btns">
       <h3 class="block-title">Пол</h3>
       <input type="radio" id="male" class="radioButton"
       name="gender" value="male" [(ngModel)]="userSettingsModel.gender">
