--- a/src/app/catalog-page/catalog/catalog.component.html
+++ b/src/app/catalog-page/catalog/catalog.component.html
@@ -10,7 +10,7 @@
     </ul>
   </div>
   <h2 class="category-title" *ngIf="subcategory">{{ subcategory }}</h2>
-  <app-filter></app-filter>
+  <app-filter [catalogFilters]="catalogFiltersModel"></app-filter>
   <app-items></app-items>
 </div>
 
