--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
@@ -8,8 +8,8 @@
       </div>
       <div class="filter-values f-types" [ngClass]="{open: fliterOpen === 0}">
         <section  class="filter-values-wrapper f-checkboxs">
-          <mat-checkbox class="filter-text" (ngModelChange)="onFilterChange()" [(ngModel)]="catalogFilters.PSD" name='PSD' #typePSD="ngModel">PSD</mat-checkbox>
-          <mat-checkbox class="filter-text" (ngModelChange)="onFilterChange()" [(ngModel)]="catalogFilters.PNG" name='PNG' #typePNG="ngModel">PNG</mat-checkbox>
+          <mat-checkbox class="filter-text" [(ngModel)]="catalogFilters.PSD" (ngModelChange)="onFilterChange()"  name='PSD' #typePSD="ngModel">PSD</mat-checkbox>
+          <mat-checkbox class="filter-text" [(ngModel)]="catalogFilters.PNG" (ngModelChange)="onFilterChange()"  name='PNG' #typePNG="ngModel">PNG</mat-checkbox>
         </section >
         <div class="filter-btns">
           <div class="f-btn" (click)="clearTypes()">Очистить</div>
@@ -59,7 +59,7 @@
         <div class="btn-show-full" [ngClass]="{open: fliterOpen === 2}"></div>
       </div>
       <div class="filter-values f-term" [ngClass]="{open: fliterOpen === 2}">
-        <mat-radio-group class="filter-values-wrapper" (ngModelChange)="onFilterChange()" [(ngModel)]="catalogFilters.maxTerm" name='maxTerm' #maxTerm="ngModel">
+        <mat-radio-group class="filter-values-wrapper" [(ngModel)]="catalogFilters.maxTerm" (ngModelChange)="onFilterChange()"  name='maxTerm' #maxTerm="ngModel">
           <mat-radio-button class="filter-text" value="">None</mat-radio-button>
           <mat-radio-button class="filter-text" value="1">Экспресс за 24 часа</mat-radio-button>
           <mat-radio-button class="filter-text" value="3">До 3 дней</mat-radio-button>
@@ -81,9 +81,9 @@
       </div>
       <div class="filter-values f-includes" [ngClass]="{open: fliterOpen === 3}">
         <section  class="filter-values-wrapper f-checkboxs">
-          <mat-checkbox class="filter-text" (ngModelChange)="onFilterChange()" [(ngModel)]="catalogFilters.commercial" name='commercial' #commercial="ngModel">Коммерческое использование</mat-checkbox>
-          <mat-checkbox class="filter-text" (ngModelChange)="onFilterChange()" [(ngModel)]="catalogFilters.confidentiality" name='confidentiality' #confidentiality="ngModel">Конфиденциальность</mat-checkbox>
-          <mat-checkbox class="filter-text" (ngModelChange)="onFilterChange()" [(ngModel)]="catalogFilters.agreement" name='agreement' #agreement="ngModel">Контракты и соглашения</mat-checkbox>
+          <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.commercial" (ngModelChange)="onFilterChange()" name='commercial' #commercial="ngModel">Коммерческое использование</mat-checkbox>
+          <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.confidentiality"  (ngModelChange)="onFilterChange()" name='confidentiality' #confidentiality="ngModel">Конфиденциальность</mat-checkbox>
+          <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.agreement"  (ngModelChange)="onFilterChange()" name='agreement' #agreement="ngModel">Контракты и соглашения</mat-checkbox>
         </section >
         <div class="filter-btns">
           <div class="f-btn" (click)="clearIncludes()">Очистить</div>
