--- a/src/app/chat/components/message-list/message-list.component.scss
+++ b/src/app/chat/components/message-list/message-list.component.scss
@@ -21,6 +21,7 @@
     background-color: #e6e9ff;
     padding: 14px 24px;
     border-radius: 0px 15px 15px 15px;
+    white-space: pre-wrap;
   }
   .photo {
     max-width: 40px;
@@ -56,6 +57,7 @@
     .text {
       background-color: #eae8ed;
       border-radius: 15px 0px 15px 15px;
+
     }
     .time {
       margin: 0 20px 0 50px;
