--- a/src/app/chat/components/message-list/message-list.component.html
+++ b/src/app/chat/components/message-list/message-list.component.html
@@ -1,19 +1,16 @@
 <section class="message-wrap">
   <div class="message-list">
-    <div>
-      <div *ngFor="let mess of messages">
-        <div class="message" [ngClass]="{ autor: mess.id === 2 }" (click)="open()">
+    <div *ngIf="messagesList">
+      <div *ngFor="let message of messagesList, let i = index" >
+        <div class="message" (click)="open()">
           <div class="photo">
             <img src="/assets/images/images/ava.jpg" alt="">
           </div>
-          <!-- <div class="text">
-            {{mess.text}}
-          </div> -->
-          <div class="text">
-            {{mess.message}}
+          <div class="text" >
+            {{message.message}}
           </div>
           <div class="message-control" *ngIf="false"></div>
-          <span class="time">{{ mess.time }}</span>
+          <span class="time">{{ message.dateTime | dateFormatPipe }}</span>
         </div>
 
       </div>
@@ -21,3 +18,4 @@
   </div>
 </section>
 
+<!-- [ngClass]="{ autor: mess.id === 2 }"  -->
