--- a/src/app/chat/components/messager/messager.component.html
+++ b/src/app/chat/components/messager/messager.component.html
@@ -1,41 +1,25 @@
 <div class="wrapper">
-  <div class="line">
-    <div class="collocutor">
-      {{ collocutorData.collocutorName }} {{ collocutorData.collocutorSurname }} <span>онлайн</span>
-    </div>
-    <div class="messager-tools">
+  <div class="inform">
+  <div class="collocutor">
+    Жанна Друкач <span>онлайн</span>
+  </div>
+  <div class="messager-tools">
 
   </div>
-  <div class="messager-wrap">
-    <div class="previous-massages">
-      <app-message-list [chatRoom]="collocutorData"  *ngIf="collocutorData" [messagesList]="messagesList"></app-message-list>
-    </div>
-    <form #message="ngForm" (ngSubmit)="sendMessage(message)" class="message-input">
-      <div class="text-input">
-        <textarea name="messageText" [ngModel]="messageText" #textinput  id="message" placeholder="Сообщение"
-          (keydown)="triggerFunction($event, message)" ></textarea>
-      </div>
-      <div class="tools">
-        <div>
-          <div class="emoji" (click)="showEmoji()" (clickOutside)="hideEmoji()">
-            <!-- isEmojiVisible -->
-            <!-- <div class="emoji-wrap"> -->
-            <emoji-mart *ngIf="isEmojiVisible" (emojiClick)="addEmoji($event)" [showPreview]="false" ></emoji-mart>
+</div>
+<div class="messager-wrap">
+
+  <div class="previous-massages">
+    <div >1</div>
+    <div class="users-message">
 
     </div>
     <div>3</div>
     <div>4</div>
   </div>
 
-          </div>
-          <div class="file">
-            <label class="add-file" for="add-file"></label>
-            <input type="file" name="file-input" id="add-file">
-          </div>
-        </div>
-        <button type="submit"  class="submit">x</button>
-      </div>
-    </form>
+  <div class="message-input">
+    <div class="tools">
 
     </div>
     <div class="text-input">
