--- a/src/app/chat/components/collocutors-list/collocutors-list.component.scss
+++ b/src/app/chat/components/collocutors-list/collocutors-list.component.scss
@@ -71,8 +71,17 @@
     }
 }
 .collocutor {
-  margin-bottom: 40px;
+  // margin-bottom: 40px;
   cursor: pointer;
+  width: 100%;
+  overflow: hidden;
+  padding: 0 0 40px;
+  // &:hover {
+  //   background: #F6F7FF;
+  //   border: 1px solid #F4F7FC;
+  //   box-sizing: border-box;
+  //   border-radius: 4px;
+  // }
 }
 
   .date {
@@ -88,6 +97,12 @@
   .message-preview {
     display: flex;
     flex-direction: row;
+
+    .message-information {
+      width: inherit;
+      overflow: hidden;
+      }
+
     p{
       margin: 0;
       padding: 0;
