--- a/src/app/chat/components/messager/messager.component.html
+++ b/src/app/chat/components/messager/messager.component.html
@@ -30,7 +30,7 @@
             <input type="file" name="file-input" id="add-file">
           </div>
         </div>
-        <button type="submit"  class="submit">x</button>
+        <button type="submit"  class="submit"></button>
       </div>
     </form>
 
